objects/invoices__x.object
<CustomObject><fields>
        <fullName>billAmount__c</fullName>
        <description>billAmount</description>
        <externalDeveloperName>billAmount</externalDeveloperName>
        <label>billAmount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>billDate__c</fullName>
        <description>billDate</description>
        <externalDeveloperName>billDate</externalDeveloperName>
        <label>billDate</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>invoiceId__c</fullName>
        <description>invoiceId</description>
        <externalDeveloperName>invoiceId</externalDeveloperName>
        <label>invoiceId</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>projectRef__c</fullName>
        <description>projectRef</description>
        <externalDeveloperName>projectRef</externalDeveloperName>
        <label>projectRef</label>
        <length>128</length>
        <referenceTargetField>Project__c.ProjectRef__c</referenceTargetField>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>invoices</relationshipLabel>
        <relationshipName>invoices</relationshipName>
        <type>IndirectLookup</type>
    </fields><deploymentStatus>InDevelopment</deploymentStatus><description>invoices</description><enableFeeds>false</enableFeeds><enableReports>false</enableReports><enableSearch>true</enableSearch><externalDataSource>BillingService</externalDataSource><externalName>invoices</externalName><label>invoices</label><pluralLabel>invoices</pluralLabel></CustomObject>